2011-09-28  sgaure

	* [r708] pkg/R/lfe.R, pkg/src/lfe.c: added some explicit gc, fixed
	  syntax error in windows
	* [r707] pkg/src/lfe.c: give progress report on centering each hour

2011-09-27  sgaure

	* [r706] configure.ac:
	* [r705] pkg/src/lfe.c:
	* [r704] pkg/src/lfe.c: progress report when centering of single vector
	  exceeds 1 hour
	* [r703] configure.ac, pkg/src/Makevars.in: support for missing
	  sem_timedwait
	* [r702] pkg/exec/lfescript:

2011-09-26  sgaure

	* [r701] pkg/man/lfe-package.Rd:
	* [r700] pkg/src/lfe.c: Kaczmarz is not thread safe
	* [r699] pkg/exec/lfescript: make dummy-command available for stata
	  datasets

2011-09-25  sgaure

	* [r698] pkg/src/lfe.c: protect the shuffling with a lock, due to
	  non-thread-safe random generator
	* [r697] pkg/R/kaczmarz.R: allow 500MB in parallel Kaczmarz
	* [r696] pkg/src/lfe.c, pkg/tests/fourfac.R,
	  pkg/tests/fourfac.Rout.save, pkg/tests/lfetest.Rout.save: inlined the
	  gmean() function in centre()

2011-09-23  sgaure

	* [r695] pkg/src/lfe.c:
	* [r694] pkg/src/lfe.c: syntax error
	* [r693] pkg/tests/nonest.R, pkg/tests/nonest.Rout.save: changed the
	  nonest test
	* [r692] pkg/src/lfe.c: don't include semaphore.h on windows
	* [r691] pkg/R/kaczmarz.R, pkg/tests/efcheck.Rout.save,
	  pkg/tests/fourfac.Rout.save, pkg/tests/nonest.R,
	  pkg/tests/nonest.Rout.save, pkg/tests/verify.Rout.save: make sure to
	  check estimability if more than 2 factors
	* [r690] pkg/exec/lfescript, pkg/inst/doc/lfeguide.txt,
	  pkg/man/getfe.Rd: lfe.randkac-option removed since we allways shuffle
	* [r689] pkg/R/kaczmarz.R, pkg/tests/efcheck.Rout.save,
	  pkg/tests/fourfac.R, pkg/tests/fourfac.Rout.save,
	  pkg/tests/lfetest.Rout.save: tests reflects mandatory
	  Kaczmarz-shuffling, also fixed bug in zm2-estimable function
	* [r688] pkg/R/kaczmarz.R: random Kaczmarz is mandatory
	* [r687] pkg/src/lfe.c: random kaczmarz as mandatory
	* [r686] pkg/tests/fourfac.R: check zm and zm2

2011-09-22  sgaure
