@@ -1,3 +1,3 @@
 PKG_LIBS=@PTHREAD_CFLAGS@ @PTHREAD_LIBS@
-PKG_CFLAGS=$(C_VISIBILITY) @PTHREAD_CFLAGS@ @SEM_TW@
+PKG_CFLAGS=$(C_VISIBILITY) @PTHREAD_CFLAGS@ @SEM_FLAGS@
 OBJECTS=lfe.o
